# retardlauncher

./: CMakeLists.txt  README.md
include/httplib/: httplib.h
include/mojang/api/: api.cpp  api.h  download.cpp  download.h  news.cpp  news.h
include/mojang/auth/: offline.h
include/mojang/game/: launch.cpp  launch.h
include/utils/: utils.cpp  utils.h
launcherfront/: go.mod  launcher.html  main.go
mojang/api/: api.h
mojang/auth/: offline.cpp
mojang/game/: launch.cpp
src/: main.cpp
src/mojang/auth/: offline.h  online.h
src/mojang/jar/: download.h  launcher.h
